[package]
name = "intel471-rs"
version = "0.1.0"
edition = "2024"
description = "Rust client library for the Intel471 API"
license = "BSD-3-Clause"
repository = "https://github.com/SassafrasAI/intel471-rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
url = "2"
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"